[package]
name = "rolling-sampler-clone"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
members = ["xtask"]

[dependencies]
crossbeam = "0.8"
dirs-next = "2.0.0"
drag = "2.1.0"
nih_plug = { git = "https://github.com/danmarkowal/nih-plug.git", branch = "custom", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/danmarkowal/nih-plug.git", branch = "custom"}
rfd = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
triple_buffer = "8.1.1"
